rust_writer_procedural/tests/ui/mutator_fails_if_implementor_isnt_debug.stderr
error[E0277]: `A` doesn't implement `Debug`
 --> tests/ui/mutator_fails_if_implementor_isnt_debug.rs:7:1
  |
7 | #[impl_mutator]
  | ^^^^^^^^^^^^^^^ `A` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `A`
  = note: add `#[derive(Debug)]` to `A` or manually `impl Debug for A`
  = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the attribute macro `impl_mutator` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `A` with `#[derive(Debug)]`
  |
9 + #[derive(Debug)]
10| struct A {
  |

error[E0277]: `A` doesn't implement `Debug`
  --> tests/ui/mutator_fails_if_implementor_isnt_debug.rs:15:1
   |
15 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, local = A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `A` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `A`
   = note: add `#[derive(Debug)]` to `A` or manually `impl Debug for A`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `A` with `#[derive(Debug)]`
   |
9  + #[derive(Debug)]
10 | struct A {
   |
